--- a/index.html
+++ b/index.html
@@ -4,9 +4,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#shoes">Shoes</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#backpack">Backpack</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#contactus">Contact Us</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div id="carouselExampleControls" class="carousel slide carousel-bgcolor " data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <div class="row align-items-center">
+                          <div class="col-md-7">
+                              <h1>Mega LCD TV For Sports</h1>
+                              <p class="font-change">This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                              <h1 class="price">$1200</h1>
+                              <button class="buy-now-button">Buy Now</button>
+                          </div>
+                          <div class="col-md-5">
+                            <img src="img/tv.png" class="d-block w-100" alt="tv">    
+                          </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                      <div class="row align-items-center">
+                          <div class="col-md-7">
+                            <h1>Cool Dude Headphone</h1>
+                            <p class="font-change">This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                            <h1 class="price">$420</h1>
+                            <button class="buy-now-button">Buy Now</button>
+                          </div>
+                          <div class="col-md-5">
+                            <img src="img/headphone.png" class="d-block w-100" alt="headphone">
+                          </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                      <div class="row align-items-center">
+                          <div class="col-md-7">
+                            <h1>X-Box for your living room</h1>
+                            <p class="font-change">This is the best x-box in the world for people who just want to waste time in front for fake sports.</p>
+                            <h1 class="price">$600</h1>
+                            <button class="buy-now-button">Buy Now</button>
+                          </div>
+                          <div class="col-md-5">
+                               <img src="img/xbox.png" class="d-block w-100" alt="xbox">
+                          </div>
+                      </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+        </div>
+    </main>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
