--- a/index.html
+++ b/index.html
@@ -89,6 +89,28 @@
                 </a>
               </div>
         </div>
+        <div class="container categories">
+            <div class="row align-items-center">
+                <div class="col-md-4">
+                  <div class="d-flex justify-content-between align-items-center cat1">
+                    <h1>Watch</h1>
+                    <img src="img/watch.png" alt="" srcset="">
+                  </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="d-flex justify-content-between align-items-center cat2">
+                      <h1>Bag</h1>
+                      <img src="img/bag.png" alt="" srcset="">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="d-flex justify-content-between align-items-center cat3">
+                      <h1>Shoes</h1>
+                      <img src="img/shoes.png" alt="" srcset="">
+                    </div>  
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
