--- a/index.html
+++ b/index.html
@@ -10,107 +10,148 @@
 </head>
 <body>
     <header>
+      <section>
+        
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#shoes">Shoes</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#backpack">Backpack</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#contactus">Contact Us</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-        </div>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#shoes">Shoes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#backpack">Backpack</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contactus">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+      </div>
+    </section>
     </header>
     <main>
+      <section>
         <div class="container">
-            <div id="carouselExampleControls" class="carousel slide carousel-bgcolor " data-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                      <div class="row align-items-center">
-                          <div class="col-md-7">
-                              <h1>Mega LCD TV For Sports</h1>
-                              <p class="font-change">This is the best tv in the world for people who just want to waste time in front of tv.</p>
-                              <h1 class="price">$1200</h1>
-                              <button class="buy-now-button">Buy Now</button>
-                          </div>
-                          <div class="col-md-5">
-                            <img src="img/tv.png" class="d-block w-100" alt="tv">    
-                          </div>
-                      </div>
-                  </div>
-                  <div class="carousel-item">
-                      <div class="row align-items-center">
-                          <div class="col-md-7">
-                            <h1>Cool Dude Headphone</h1>
-                            <p class="font-change">This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
-                            <h1 class="price">$420</h1>
+          <div id="carouselExampleControls" class="carousel slide carousel-bgcolor " data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row align-items-center">
+                        <div class="col-md-7">
+                            <h1>Mega LCD TV For Sports</h1>
+                            <p class="font-change">This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                            <h1 class="price">$1200</h1>
                             <button class="buy-now-button">Buy Now</button>
-                          </div>
-                          <div class="col-md-5">
-                            <img src="img/headphone.png" class="d-block w-100" alt="headphone">
-                          </div>
-                      </div>
-                  </div>
-                  <div class="carousel-item">
-                      <div class="row align-items-center">
-                          <div class="col-md-7">
-                            <h1>X-Box for your living room</h1>
-                            <p class="font-change">This is the best x-box in the world for people who just want to waste time in front for fake sports.</p>
-                            <h1 class="price">$600</h1>
-                            <button class="buy-now-button">Buy Now</button>
-                          </div>
-                          <div class="col-md-5">
-                               <img src="img/xbox.png" class="d-block w-100" alt="xbox">
-                          </div>
-                      </div>
+                        </div>
+                        <div class="col-md-5">
+                          <img src="img/tv.png" class="d-block w-100" alt="tv">    
+                        </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
+                <div class="carousel-item">
+                    <div class="row align-items-center">
+                        <div class="col-md-7">
+                          <h1>Cool Dude Headphone</h1>
+                          <p class="font-change">This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                          <h1 class="price">$420</h1>
+                          <button class="buy-now-button">Buy Now</button>
+                        </div>
+                        <div class="col-md-5">
+                          <img src="img/headphone.png" class="d-block w-100" alt="headphone">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row align-items-center">
+                        <div class="col-md-7">
+                          <h1>X-Box for your living room</h1>
+                          <p class="font-change">This is the best x-box in the world for people who just want to waste time in front for fake sports.</p>
+                          <h1 class="price">$600</h1>
+                          <button class="buy-now-button">Buy Now</button>
+                        </div>
+                        <div class="col-md-5">
+                             <img src="img/xbox.png" class="d-block w-100" alt="xbox">
+                        </div>
+                    </div>
+                  </div>
               </div>
-        </div>
-        <div class="container categories">
-            <div class="row align-items-center">
-                <div class="col-md-4">
-                  <div class="d-flex justify-content-between align-items-center cat1">
-                    <h1>Watch</h1>
-                    <img src="img/watch.png" alt="" srcset="">
-                  </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="d-flex justify-content-between align-items-center cat2">
-                      <h1>Bag</h1>
-                      <img src="img/bag.png" alt="" srcset="">
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="d-flex justify-content-between align-items-center cat3">
-                      <h1>Shoes</h1>
-                      <img src="img/shoes.png" alt="" srcset="">
-                    </div>  
-                </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
+      </div>
+      </section>
+      <section>
+        <div class="container categories">
+          <div class="row align-items-center">
+              <div class="col-md-4">
+                <div class="d-flex justify-content-between align-items-center cat1">
+                  <h1>Watch</h1>
+                  <img src="img/watch.png" alt="" srcset="">
+                </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="d-flex justify-content-between align-items-center cat2">
+                    <h1>Bag</h1>
+                    <img src="img/bag.png" alt="" srcset="">
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="d-flex justify-content-between align-items-center cat3">
+                    <h1>Shoes</h1>
+                    <img src="img/shoes.png" alt="" srcset="">
+                  </div>  
+              </div>
+          </div>
+      </div>
+      </section>
+      <section>
+        <div class="container shoes" id="shoes">
+          <h2 class="allign-items-center">Shoes</h2>
+          <div class="card-deck">
+            <div class="card">
+              <img src="img/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius malesuada neque, a luctus nisl vehicula efficitur.</p>
+                <h1>$120</h1>
+                <button class="buy-now-button">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="img/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius malesuada neque, a luctus nisl vehicula efficitur.</p>
+                <h1>$320</h1>
+                <button class="buy-now-button">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="img/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius malesuada neque, a luctus nisl vehicula efficitur.</p>
+                <h1>$350</h1>
+                <button class="buy-now-button">Buy Now >></button>
+              </div>
+            </div>
+          </div>
         </div>
+      </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
