added all section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contactus">Contact Us</a>
+                    <a class="nav-link" href="#contactus">Contact-Us</a>
                   </li>
                 </ul>
               </div>
@@ -120,10 +120,10 @@
       </section>
       <section>
         <div class="container shoes" id="shoes">
-          <h2 class="allign-items-center">Shoes</h2>
+          <h2 class="head-center">Shoes</h2>
           <div class="card-deck">
             <div class="card">
-              <img src="img/shoe-1.png" class="card-img-top" alt="...">
+              <img src="img/shoe-1.png" class="card-img-top" alt="shoe1">
               <div class="card-body">
                 <h5 class="card-title">Supply 350</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius malesuada neque, a luctus nisl vehicula efficitur.</p>
@@ -132,7 +132,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="img/shoe-2.png" class="card-img-top" alt="...">
+              <img src="img/shoe-2.png" class="card-img-top" alt="shoe2">
               <div class="card-body">
                 <h5 class="card-title">Nike 360</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius malesuada neque, a luctus nisl vehicula efficitur.</p>
@@ -141,7 +141,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="img/shoe-3.png" class="card-img-top" alt="...">
+              <img src="img/shoe-3.png" class="card-img-top" alt="shoe3">
               <div class="card-body">
                 <h5 class="card-title">Red Airmax</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius malesuada neque, a luctus nisl vehicula efficitur.</p>
@@ -152,7 +152,58 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="container" id="backpack">
+          <h1 class="head-center">Backpack</h1>
+          <div class="card-deck">
+            <div class="card">
+              <img src="img/bag-1.png" class="card-img-top" alt="bag1">
+              <div class="card-body">
+                <h5 class="card-title">Red Ogio Bag</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius malesuada neque, a luctus nisl vehicula efficitur</p>
+                <h1>$120</h1>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"><button class="buy-now-button">Buy Now >></button></small>
+              </div>
+            </div>
+            <div class="card">
+              <img src="img/bag-2.png" class="card-img-top" alt="bag2">
+              <div class="card-body">
+                <h5 class="card-title">Blue Burton Bag</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius malesuada neque, a luctus nisl vehicula efficitur</p>
+                <h1>$320</h1>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"><button class="buy-now-button">Buy Now >></button></small>
+              </div>
+            </div>
+            <div class="card">
+              <img src="img/bag-3.png" class="card-img-top" alt="bag3">
+              <div class="card-body">
+                <h5 class="card-title">Black Kathmandu Bag</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius malesuada neque, a luctus nisl vehicula efficitur</p>
+                <h1>$169</h1>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"><button class="buy-now-button">Buy Now >></button></small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="container carousel-bgcolor d-flex justify-content-center align-items-center" id="contactus">
+        <div>
+          <h1>LET'S STAY IN TOUCH</h1>
+          <h6>Get updates on sales, specials and more</h6>
+          <input class="form-control" type="email" name="" id="">
+          <button class="buy-now-button2">Buy Now >></button>
+        </div>
+      </div>
+      <p><h6 class="d-flex justify-content-center">©copyright 2020. Panda Commerce. All Rights Reserved By Razwan Hossain Ifaz </h6></p>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
