changed button text and also input

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
         <div>
           <h1>LET'S STAY IN TOUCH</h1>
           <h6>Get updates on sales, specials and more</h6>
-          <input class="form-control" type="email" name="" id="">
-          <button class="buy-now-button2">Buy Now >></button>
+          <input class="form-control" type="email" text="Justinbeiber@gmail.com" name="" id="">
+          <button class="buy-now-button2">Submit</button>
         </div>
       </div>
       <p><h6 class="d-flex justify-content-center">©copyright 2020. Panda Commerce. All Rights Reserved By Razwan Hossain Ifaz </h6></p>
